--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 
-html {
+/* html {
   overflow: hidden;
 }
 
@@ -33,4 +33,9 @@ html {
   html {
     overflow: auto;
   }
+} */
+
+.myInput:focus {
+  outline: none;
+  box-shadow: none;
 }
